Added new structs
