# restapi/operations/jtree_metadata_api.go
@@ -41,18 +41,15 @@ func NewJtreeMetadataAPI(spec *loads.Document) *JtreeMetadataAPI {
 		AddPatientHandler: AddPatientHandlerFunc(func(params AddPatientParams) middleware.Responder {
 			return middleware.NotImplemented("operation AddPatient has not yet been implemented")
 		}),
+		AddResultHandler: AddResultHandlerFunc(func(params AddResultParams) middleware.Responder {
+			return middleware.NotImplemented("operation AddResult has not yet been implemented")
+		}),
+		AddResultdetailsHandler: AddResultdetailsHandlerFunc(func(params AddResultdetailsParams) middleware.Responder {
+			return middleware.NotImplemented("operation AddResultdetails has not yet been implemented")
+		}),
 		AddSampleHandler: AddSampleHandlerFunc(func(params AddSampleParams) middleware.Responder {
 			return middleware.NotImplemented("operation AddSample has not yet been implemented")
 		}),
-		// GetPatientHandler: GetPatientHandlerFunc(func(params GetPatientParams) middleware.Responder {
-		// 	return middleware.NotImplemented("operation GetPatient has not yet been implemented")
-		// }),
-		// GetPatientColumnsHandler: GetPatientColumnsHandlerFunc(func(params GetPatientColumnsParams) middleware.Responder {
-		// 	return middleware.NotImplemented("operation GetPatientColumns has not yet been implemented")
-		// }),
-		// GetSampleHandler: GetSampleHandlerFunc(func(params GetSampleParams) middleware.Responder {
-		// 	return middleware.NotImplemented("operation GetSample has not yet been implemented")
-		// }),
 		GetSampleColumnsHandler: GetSampleColumnsHandlerFunc(func(params GetSampleColumnsParams) middleware.Responder {
 			return middleware.NotImplemented("operation GetSampleColumns has not yet been implemented")
 		}),
@@ -62,12 +59,6 @@ func NewJtreeMetadataAPI(spec *loads.Document) *JtreeMetadataAPI {
 		LogoutHandler: LogoutHandlerFunc(func(params LogoutParams) middleware.Responder {
 			return middleware.NotImplemented("operation Logout has not yet been implemented")
 		}),
-		// SearchPatientHandler: SearchPatientHandlerFunc(func(params SearchPatientParams) middleware.Responder {
-		// 	return middleware.NotImplemented("operation SearchPatient has not yet been implemented")
-		// }),
-		// SearchSampleHandler: SearchSampleHandlerFunc(func(params SearchSampleParams) middleware.Responder {
-		// 	return middleware.NotImplemented("operation SearchSample has not yet been implemented")
-		// }),
 	}
 }
 
@@ -103,24 +94,18 @@ type JtreeMetadataAPI struct {
 	AddExperimentHandler AddExperimentHandler
 	// AddPatientHandler sets the operation handler for the add patient operation
 	AddPatientHandler AddPatientHandler
+	// AddResultHandler sets the operation handler for the add result operation
+	AddResultHandler AddResultHandler
+	// AddResultdetailsHandler sets the operation handler for the add resultdetails operation
+	AddResultdetailsHandler AddResultdetailsHandler
 	// AddSampleHandler sets the operation handler for the add sample operation
 	AddSampleHandler AddSampleHandler
-	// GetPatientHandler sets the operation handler for the get patient operation
-	//GetPatientHandler GetPatientHandler
-	// GetPatientColumnsHandler sets the operation handler for the get patient columns operation
-	//GetPatientColumnsHandler GetPatientColumnsHandler
-	// GetSampleHandler sets the operation handler for the get sample operation
-	//GetSampleHandler GetSampleHandler
 	// GetSampleColumnsHandler sets the operation handler for the get sample columns operation
 	GetSampleColumnsHandler GetSampleColumnsHandler
 	// GetSamplesByQueryHandler sets the operation handler for the get samples by query operation
 	GetSamplesByQueryHandler GetSamplesByQueryHandler
 	// LogoutHandler sets the operation handler for the logout operation
 	LogoutHandler LogoutHandler
-	// SearchPatientHandler sets the operation handler for the search patient operation
-	//SearchPatientHandler SearchPatientHandler
-	// SearchSampleHandler sets the operation handler for the search sample operation
-	//SearchSampleHandler SearchSampleHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -192,21 +177,17 @@ func (o *JtreeMetadataAPI) Validate() error {
 		unregistered = append(unregistered, "AddPatientHandler")
 	}
 
+	if o.AddResultHandler == nil {
+		unregistered = append(unregistered, "AddResultHandler")
+	}
+
+	if o.AddResultdetailsHandler == nil {
+		unregistered = append(unregistered, "AddResultdetailsHandler")
+	}
+
 	if o.AddSampleHandler == nil {
 		unregistered = append(unregistered, "AddSampleHandler")
 	}
-
-	// if o.GetPatientHandler == nil {
-	// 	unregistered = append(unregistered, "GetPatientHandler")
-	// }
-
-	// if o.GetPatientColumnsHandler == nil {
-	// 	unregistered = append(unregistered, "GetPatientColumnsHandler")
-	// }
-
-	// if o.GetSampleHandler == nil {
-	// 	unregistered = append(unregistered, "GetSampleHandler")
-	// }
 
 	if o.GetSampleColumnsHandler == nil {
 		unregistered = append(unregistered, "GetSampleColumnsHandler")
@@ -219,14 +200,6 @@ func (o *JtreeMetadataAPI) Validate() error {
 	if o.LogoutHandler == nil {
 		unregistered = append(unregistered, "LogoutHandler")
 	}
-
-	// if o.SearchPatientHandler == nil {
-	// 	unregistered = append(unregistered, "SearchPatientHandler")
-	// }
-
-	// if o.SearchSampleHandler == nil {
-	// 	unregistered = append(unregistered, "SearchSampleHandler")
-	// }
 
 	if len(unregistered) > 0 {
 		return fmt.Errorf("missing registration: %s", strings.Join(unregistered, ", "))
@@ -335,6 +308,16 @@ func (o *JtreeMetadataAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/patient"] = NewAddPatient(o.context, o.AddPatientHandler)
+
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/result"] = NewAddResult(o.context, o.AddResultHandler)
+
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/resultdetails"] = NewAddResultdetails(o.context, o.AddResultdetailsHandler)
 
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
